fix cards on mobile

--- a/style.css
+++ b/style.css
@@ -141,7 +141,6 @@ body {
   width: 20vw;
   min-width: 250px;
   min-height: 200px;
-  max-height: 500px;
   border-radius: 10px;
   box-shadow: 0 6px 10px rgba(0, 0, 0, 0.25);
   transition: all 0.2s;
